# swarmbot

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  README_EN.md  TEST_PLAN.md  WORKSPACE_LAYOUT.md  benchmark_nanbeige.py  configure_test.py  debug_qwen.py  debug_qwen_agent.py  debug_qwen_complex.py  debug_qwen_empty_tools.py  hot_memory.md  pyproject.toml  spec_0.6.md  spec_1.0.md  spec_1.1.md  swarmboot.md  swarmbot_run  sync_config.py  test_emergency_updates.py  test_feishu_send.py  test_gateway_simulation.py  test_graphiti.py  test_memory_smoke.py
artifacts/: analysis_routing_v1_1_route.json  analysis_routing_v1_1_route_tuned.json  analysis_routing_v1_1_route_tuned2.json  bundle_optimization_report_20260322_143347.json  bundle_optimization_report_20260322_144046.json  bundle_optimization_report_20260322_144952.json  coding10_supervisor_v1_1_coding10_gatev2~.json  conflict_stability_v1_1_conflict_stability_r3.json  conflict_stability_v1_1_conflict_stability_r3.jsonl  conflict_supervisor_v1_1_conflict20_gatev2.json  conflict_supervisor_v1_1_conflict20_gatev2.jsonl  hardmix_supervisor_v1_1_hardmix30_gatev2.json  hardmix_supervisor_v1_1_hardmix30_gatev2.jsonl  inference_benchmark_v1_1_final_loop.json  inference_benchmark_v1_1_final_loop_tuned.json  inference_benchmark_v1_1_stage1.json  musique_loop_vs_pure_v1_1_musique30_gatev2.json  musique_loop_vs_pure_v1_1_musique30_gatev2.jsonl  musique_loop_vs_pure_v1_1_musique30_looplite.json  musique_loop_vs_pure_v1_1_musique30_looplite.jsonl  musique_loop_vs_pure_v1_1_musique50_gatev2.json  musique_loop_vs_pure_v1_1_musique50_gatev2.jsonl  subtask_async_v1_1_async.json
data/: musique_100.json
docs/: 0.6.6_plan.md  ARCHITECTURE.md  LOGIC_TRAP_EVAL.md  (+14 more)
(+209 files in other folders)
