[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmbot"
version = "0.2.6"
description = "Swarmbot: 基于 nanobot 框架的多 Agent Swarm 系统，支持本地 OpenAI 接口模型与记忆(QMD)。"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "swarms>=5.0.0",
]

[project.scripts]
swarmbot = "swarmbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmbot*"]
exclude = ["output*", "tests*", "scripts*", "docs*"]
