[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmbot"
version = "0.2.8"
description = "Swarmbot: 基于 nanobot 框架的多 Agent Swarm 系统，支持本地 OpenAI 接口模型与记忆(QMD)。"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "swarms>=5.0.0",
  "json_repair>=0.10.0",
  "loguru>=0.7.0",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "prompt_toolkit>=3.0.0",
  "litellm>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.20.0",
]

[project.scripts]
swarmbot = "swarmbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmbot*"]
exclude = ["output*", "tests*", "scripts*", "docs*"]
